--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,6 @@
     },
     "require": {
         "php": "^7.3|^8.0",
-        "illuminate/support": "^6|^7|^8"
+        "illuminate/support": "^6|^7|^8|^9|^10"
     }
 }
