--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "type": "library",
     "autoload": {
         "psr-4": {
-            "laravel_easy_log\\easy-log\\": "src/"
+            "LaravelEasyLog\\EasyLog\\": "src/"
         }
     },
     "authors": [
@@ -17,7 +17,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "laravel_easy_log\\easy_log\\CustomLogServiceProvider"
+                "LaravelEasyLog\\EasyLog\\CustomLogServiceProvider"
             ]
         }
     },
